<resources>
    <string name="app_name">AppUpdater</string>
    <string name="title_activity_debug_settings">Device Information</string>
    <!-- App Update Strings -->
    <string name="notification_title_exception_download">Exception Occurred (Download)</string>
    <string name="notification_ticker_download_fail">Download failed</string>
    <string name="notification_content_download_fail_exception">An exception occurred while downloading the update file. (%1$s)</string>
    <string name="notification_content_download_fail_exception_expanded">An exception occurred while downloading the update file. (%1$s)\n Click to manually download the file</string>
    <string name="notification_content_download_fail">The update is unable to download automatically</string>
    <string name="notification_content_download_fail_expanded">The update is unable to download automatically.\n Click to manually download the file</string>
    <string name="notification_title_download_success">Download Complete</string>
    <string name="notification_ticker_download_success">Download Complete!</string>
    <string name="notification_content_download_success">Update has been successfully downloaded</string>
    <string name="notification_title_starting_download">Downloading new update</string>
    <string name="notification_content_starting_download">Downloading new update…</string>
    <string name="notification_ticker_starting_download">Downloading new update to the app</string>
    <string name="dialog_title_latest_update">Check for New Update</string>
    <string name="dialog_message_latest_update">You are on the latest release! No update is required.</string>
    <string name="dialog_action_positive_close">Close</string>
    <string name="toast_message_latest_update">No update is required</string>
    <string name="toast_cannot_contact_update_server">Unable to contact update server to check for updates</string>
    <string name="redownload">Redownload</string>
    <string name="download">Download</string>
    <string name="progress">%1$.0f%%</string>
    <string name="install">Install</string>
    <string name="lbl_install_update">3) Install Update</string>
    <string name="lbl_unknown_enable">1) Enable Unknown Sources</string>
    <string name="lbl_unknown_enable_api_26">1) Grant Install Unknown App Permission</string>
    <string name="grant">Grant</string>
    <string name="lbl_dl_update">2) Downloading New Update</string>
    <string name="show_more">Show More</string>
    <string name="what_new">What\'s New in this version</string>
    <string name="enable">Enable</string>
    <string name="menu_share_logs">Share Logs</string>
    <string name="pref_cat_appinfo">App Info</string>
    <string name="pref_app_version">App Version</string>
    <string name="pref_package_name">Package Name</string>
    <string name="pref_android_version">Android Version</string>
    <string name="pref_oss_license_info">Open Source License Information</string>
    <string name="pref_about_app">About this app</string>
    <string name="pref_issue_tracker">Issue Tracker</string>
    <string name="pref_bug_report">Report Bug/Feature Request</string>
    <string name="pref_fdroid_repo">Add F-Droid Repo</string>
    <string name="pref_view_device_info">View Device Info</string>
    <string name="pref_view_app_logs">View App Logs</string>
    <string name="pref_analytics">Analytics</string>
    <string name="placeholder_null">NULL</string>
    <string name="pref_summary_oss_license_info">View Open Source License Information</string>
    <string name="pref_summary_about_app">View information about this application</string>
    <string name="pref_summary_issue_tracker">View the issue tracker for this application</string>
    <string name="pref_summary_bug_report">View the app feature request and bug report page</string>
    <string name="pref_summary_fdroid_repo">Add F-Droid repository for this app</string>
    <string name="pref_summary_view_device_info">View information of your device</string>
    <string name="pref_summary_view_app_logs">View the application log data</string>
    <string name="pref_summary_analytics">Uncheck to disable sending of analytics data</string>
    <string name="pref_cat_device_info">Device Info</string>
    <string name="pref_debug_model">Model</string>
    <string name="pref_debug_manufacturer">Manufacturer</string>
    <string name="pref_debug_board">Board</string>
    <string name="pref_debug_bootloader">Bootloader</string>
    <string name="pref_debug_brand">Brand</string>
    <string name="pref_debug_cpu_type_1">Primary CPU Types</string>
    <string name="pref_debug_cpu_type_2">Secondary CPU Types</string>
    <string name="pref_debug_device">Device</string>
    <string name="pref_debug_build_id">Build ID</string>
    <string name="pref_debug_fingerprint">Fingerprint</string>
    <string name="pref_debug_hardware">Hardware</string>
    <string name="pref_debug_host">Host</string>
    <string name="pref_debug_product_id">Product ID</string>
    <string name="pref_debug_product">Product</string>
    <string name="pref_debug_radio">Radio</string>
    <string name="pref_debug_tags">Tags</string>
    <string name="pref_debug_type">Type</string>
    <string name="pref_debug_user">User</string>
    <string name="placeholder_unavailable">Unavailable</string>
    <string name="pref_cat_updater">Updater</string>
    <string name="pref_wifi_only_update_check">Wifi Only Update Checking</string>
    <string name="pref_check_updates">Check for Update</string>
    <string name="pref_latest_app_version">Get Latest App Version</string>
    <string name="pref_legacy_app_version">Get Legacy Versions of App</string>
    <string name="pref_view_changelog">View Changelog</string>
    <string name="pref_installed_from">Installed From</string>
    <string name="pref_summary_view_changelog">View Changelog Information</string>
    <string name="pref_summary_legacy_app_version">Launch a webpage to get older releases of the application!</string>
    <string name="pref_summary_latest_app_version">Launch a webpage to get the latest release of the application!</string>
    <string name="pref_summary_check_updates">Checks for new version of the application</string>
    <string name="pref_summary_wifi_only_update_check">Do update checking only on Wifi</string>
    <string name="no_perm_package_install_dialog_title">Unable to check for updates</string>
    <string name="no_perm_package_install_dialog_message">Application does not have the REQUEST_INSTALL_PACKAGES permission. Please contact app developer or grant it manually via adb</string>
    <string name="download_started_no_notification">Download started. Grant notification permission to see progress</string>
</resources>
