<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_appinfo" android:key="info_category">
        <Preference android:title="@string/pref_app_version" android:key="view_app_version" android:summary="@string/placeholder_null" />
        <Preference android:title="@string/pref_package_name" android:key="view_app_name" android:selectable="false" />
        <Preference android:summary="None" android:title="@string/pref_android_version" android:key="view_sdk_version" android:selectable="false"/>
        <Preference android:title="@string/pref_oss_license_info" android:key="view_oss" android:summary="@string/pref_summary_oss_license_info" />
        <Preference android:title="@string/pref_about_app" android:key="aboutapp" android:summary="@string/pref_summary_about_app" />
        <Preference android:title="@string/pref_issue_tracker" android:key="issuetracker" android:summary="@string/pref_summary_issue_tracker" />
        <Preference android:title="@string/pref_bug_report" android:key="bugreport" android:summary="@string/pref_summary_bug_report" />
        <Preference android:title="@string/pref_fdroid_repo" android:key="fdroid" android:summary="@string/pref_summary_fdroid_repo" />
        <Preference android:title="@string/pref_view_device_info" android:key="vDevInfo" android:summary="@string/pref_summary_view_device_info"/>
        <Preference android:title="@string/pref_view_app_logs" android:key="vAppLog" android:summary="@string/pref_summary_view_app_logs"/>
        <SwitchPreference android:title="@string/pref_analytics" android:summary="@string/pref_summary_analytics" android:key="ca_analytics" android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
